--- a/backend-folder/requirements.txt
+++ b/backend-folder/requirements.txt
@@ -1,7 +1,8 @@
+python==3.12.*
 fastapi==0.111.0
 uvicorn[standard]==0.30.1
 pydantic==2.7.1
 pandas==2.2.2
-numpy==2.3.1
+numpy==1.26.4
 python-multipart==0.0.9
 typing-extensions==4.11.0
