--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,5 +67,11 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7"
   }
 }
